toolcore: Build in rumprun environment too
Otherwise,
  f942a9b4a12081d5f9a4679d06e88cb5d503396e
  xentoolcore_restrict_all: "Implement" for xenstore
breaks the build of the tools inside rumprun.

toolcore is in libs, so we need to add the CONFIG_RUMP special case to
tools/libs/Makefile and add toolcore there.

Signed-off-by: Ian Jackson <Ian.Jackson@eu.citrix.com>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -49,7 +49,7 @@ SUBDIRS-$(OCAML_TOOLS) += ocaml
 endif
 
 ifeq ($(CONFIG_RUMP),y)
-SUBDIRS-y := libxc xenstore
+SUBDIRS-y := libs libxc xenstore
 endif
 
 # For the sake of linking, set the sys-root
