docs: note default for timer_mode in xl.cfg man
There was no default documented but inspecting
libxl__domain_build_info_setdefault() shows the default to be
LIBXL_TIMER_MODE_NO_DELAY_FOR_MISSED_TICKS.

Signed-off-by: Doug Goldstein <cardoe@cardoe.com>
Reviewed-by: Roger Pau Monné <roger.pau@citrix.com>
Reviewed-by: Wei Liu <wei.liu2@citrix.com>

--- a/docs/man/xl.cfg.pod.5.in
+++ b/docs/man/xl.cfg.pod.5.in
@@ -1924,7 +1924,7 @@ advance the vCPU's virtual time stepwise for each one.
 
 No delay for missed ticks. As above, missed interrupts are delivered,
 but guest time always tracks wallclock (i.e., real) time while doing
-so.
+so. This is the default.
 
 =item B<no_missed_ticks_pending>
 
@@ -2389,7 +2389,7 @@ advance the vCPU's virtual time stepwise for each one.
 
 No delay for missed ticks. As above, missed interrupts are delivered,
 but guest time always tracks wallclock (i.e., real) time while doing
-so.
+so. This is the default.
 
 =item B<no_missed_ticks_pending>
 
