kconfig/gcov: rename to coverage
So it can be used by both gcc and clang. Just add the Kconfig option
and modify the makefiles so the llvm coverage specific code can be
added in a follow up patch.

Signed-off-by: Roger Pau Monné <roger.pau@citrix.com>
Acked-by: Wei Liu <wei.liu2@citrix.com>
[jb: also change the shim config]

--- a/tools/firmware/xen-dir/shim.config
+++ b/tools/firmware/xen-dir/shim.config
@@ -76,7 +76,7 @@ CONFIG_ARCH_SUPPORTS_INT128=y
 # CONFIG_DEBUG is not set
 # CONFIG_CRASH_DEBUG is not set
 # CONFIG_FRAME_POINTER is not set
-# CONFIG_GCOV is not set
+# CONFIG_COVERAGE is not set
 # CONFIG_LOCK_PROFILE is not set
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_VERBOSE_DEBUG is not set
