xen: Fix credit1 Kconfig entry
...so that it shows up in the menu and can be disabled.

Signed-off-by: George Dunlap <george.dunlap@citrix.com>
Acked-by: Jan Beulich <jbeulich@suse.com>
Reviewed-by: Dario Faggioli <dfaggioli@suse.com>

--- a/xen/common/Kconfig
+++ b/xen/common/Kconfig
@@ -164,7 +164,8 @@ menu "Schedulers"
 	visible if EXPERT = "y"
 
 config SCHED_CREDIT
-	def_bool y
+	bool "Credit scheduler support"
+	default y
 	---help---
 	  The traditional credit scheduler is a general purpose scheduler.
 
