xen: Disable ARINC653 scheduler by default for non-DEBUG builds
The ARINC653 scheduler is targeted at a very specific niche; typical
users cannot benefit from using it.  Disable it by default for
non-DEBUG builds.  (Enable it for DEBUG builds so that we catch any
build breakages sooner rather than later.)

Signed-off-by: George Dunlap <george.dunlap@citrix.com>
Acked-by: Jan Beulich <jbeulich@suse.com>
Reviewed-by: Dario Faggioli <dfaggioli@suse.com>

--- a/xen/common/Kconfig
+++ b/xen/common/Kconfig
@@ -186,7 +186,7 @@ config SCHED_RTDS
 
 config SCHED_ARINC653
 	bool "ARINC653 scheduler support (EXPERIMENTAL)"
-	default y
+	default DEBUG
 	---help---
 	  The ARINC653 scheduler is a hard real-time scheduler for single
 	  cores, targeted for avionics, drones, and medical devices.
